[project]
name = "mcp-client-langchain-py"
version = "0.2.0"
description = "MCP Client Using LangChain / Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-tools>=0.2.0",
    "langchain>=0.3.14",
    "langchain-anthropic>=0.3.1",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.62",
]
