[project]
name = "mcp-client-langchain-py"
version = "0.2.12"
description = "MCP Client Using LangChain / Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-tools>=0.2.12",
    "langchain>=0.3.26",
    "langgraph>=0.5.0",
    "langchain-google-genai>=2.1.5",
    "langchain-anthropic>=0.3.1",
    "langchain-openai>=0.3.0",
    "langchain-xai>=0.2.4",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "websockets>=15.0.1",
]
