[project]
name = "mcp-client-langchain-py"
version = "0.3.0"
description = "MCP Client Using LangChain / Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-tools>=0.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastmcp>=2.10.1,<2.14",
    "langchain-anthropic>=1.3.2",
    "langchain-cerebras>=0.8.2",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.8",
    "langchain>=1.2.9",
]
